# turnkey

./: .bwconfig  .envrc  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  biome.json  flake.nix  foundry.toml  go-deps.toml  go.mod  go.sum  js-deps.toml  package.json  pnpm-lock.yaml  pylock.toml  pyproject.toml  python-deps.toml  rust-deps.toml  rust-features.toml  solidity-deps.toml  toolchain.ci.toml  toolchain.toml
.beads/: .gitignore  issues.jsonl
.github/workflows/: cachix.yaml  ci.yaml  ci.yaml.disabled  docs.yaml
.turnkey/: sync.toml
cmd/: __init__.py
cmd/cargo-prune-workspace/: BUCK
cmd/check-monorepo-deps/: BUCK  __init__.py  __main__.py  rules.star
cmd/check-rust-edition/: BUCK  __init__.py  __main__.py  rules.star
cmd/compute-unified-features/: BUCK  __init__.py
cmd/gen-rust-buck/: __main__.py  rules.star
cmd/godeps-gen/: BUCK  main.go
cmd/jsdeps-gen/: BUCK  Cargo.toml
cmd/jsdeps-gen/src/: main.rs
cmd/nix-prefetch-cached/: BUCK  Cargo.toml  rules.star
cmd/nix-prefetch-cached/src/: main.rs
cmd/pydeps-gen/: BUCK  Cargo.toml  rules.star
cmd/pydeps-gen/src/: main.rs
cmd/rustdeps-gen/: BUCK  Cargo.toml  main.go  rules.star
cmd/rustdeps-gen/src/: main.rs
cmd/rustfeatures-gen/: BUCK  Cargo.toml  rules.star
cmd/tk/: BUCK  main.go  rules.star
cmd/tw/: main.go
docs/: .gitignore  README.md  buck2-prelude-compatibility.md  buck2_cell_resolution.md  buck2_prelude_customization.md  dependency-management.md  fuse-composition-research.md  go-deps-cell-design.md  native-tool-wrappers.md  project_initialization.md  rules.star  rust-dependency-handling.md  testing-devenv.md  tk.md  toolchain.toml
docs/architecture/: fuse-composition-layer.md
docs/designs/: design-use-turnkey.md  typescript-rules.md
docs/developer-manual/: book.toml  rules.star
docs/landing/: book.toml
docs/plans/: nix-prelude-and-typescript.md
docs/specs/: versioned-registry.md
docs/user-manual/: book.toml  rules.star
e2e/: README.md
e2e/harness/: runner.sh
e2e/tests/: 01-greenfield-template.sh  02-ci-headless.sh  03-native-tools-sync.sh  04-multi-language.sh  05-brownfield-adoption.sh  06-git-workflow.sh  07-reproducibility.sh  08-error-recovery.sh  09-rules-star-sync.sh
examples/go-hello/: BUCK  main.go
examples/go-hello-deps/: BUCK  main.go
examples/hello-deps/: go.mod
examples/python-deps/: BUCK
examples/python-hello/: BUCK
examples/python-hello-deps/: BUCK  hello.py
examples/rust-deps/: README.md  main.rs
examples/rust-hello/: BUCK  Cargo.toml
examples/rust-hello-deps/: BUCK  Cargo.toml  main.rs
examples/solidity-hello-deps/: rules.star  solidity-deps.toml
examples/typescript-hello/: BUCK  greeter.ts  main.ts
examples/typescript-hello-deps/: BUCK  README.md  hello.ts  main.ts
issues/: turnkey-0bya.json  turnkey-0ej.json  turnkey-0f0.json  turnkey-0il.json  turnkey-0k0.json  turnkey-0ub4.json  turnkey-16i.json  turnkey-17k.json  turnkey-1b2.json  turnkey-1hk.json  turnkey-1kek.json  turnkey-1lqu.json  turnkey-1q6.json  turnkey-1td.json  turnkey-1us.json  turnkey-1vag.json  turnkey-20xv.json  turnkey-24rf.json  turnkey-27ut.json  turnkey-2dq.json  turnkey-2e0a.json  turnkey-2g8.json  turnkey-2kx.json  turnkey-2l8.json  turnkey-2ph.json  turnkey-2t5.json  turnkey-31s.json  turnkey-391.json  turnkey-399.json  turnkey-3as.json  turnkey-3qog.json  turnkey-3rp.json  turnkey-3u4.json  turnkey-3xn.json  turnkey-40b.json  turnkey-40cj.json  turnkey-415b.json  turnkey-48ju.json  turnkey-4aj2.json  turnkey-4j0o.json  (+299 more)
nix/buck2/: compute-unified-features.py  gen-rust-buck.py  go-deps-cell.nix  go-deps-example.nix  go-deps-registry.nix  js-deps-cell.nix  mappings.nix  prelude.nix  python-deps-cell.nix  rust-deps-cell-reindeer.nix  rust-deps-cell.nix  solidity-deps-cell.nix  split-reindeer-buck.py  test_cfg_parser.py
nix/home-manager/: turnkey-composed.nix
nix/lib/: cargo.nix  default.nix  semver.nix
nix/registry/: default.nix
pkg/godeps/: prefetch.go  prefetch_test.go
python/: __init__.py
python/buck/: BUCK  __init__.py  generator.py
python/cargo/: BUCK  __init__.py  rules.star  test_toml.py  toml.py
python/cfg/: evaluator.py  parser.py  rules.star  target.py  test_parser.py
rust/prefetch-cache/: BUCK  Cargo.toml  rules.star
rust/prefetch-cache/src/: lib.rs
scripts/: ci-smoke.sh
src/cmd/check-rust-edition-rs/: Cargo.toml  rules.star
src/cmd/check-rust-edition-rs/src/: main.rs
src/cmd/check-source-coverage-rs/: Cargo.toml  rules.star
src/cmd/check-source-coverage-rs/src/: main.rs
src/cmd/soldeps-gen/: Cargo.toml  rules.star
src/cmd/soldeps-gen/src/: main.rs
src/cmd/turnkey-composed/: Cargo.toml  build.rs  rules.star
src/cmd/turnkey-composed/src/: main.rs
src/python/buck/: __init__.py  generator.py  pyproject.toml  rules.star
src/python/buck/turnkey/buck/: __init__.py  generator.py
src/python/cargo/: features.py  pyproject.toml  rules.star  test_features.py  test_toml.py
src/python/cargo/tests/: test_features.py  test_toml.py
src/python/cargo/turnkey/cargo/: features.py
src/rust/composition/: Cargo.toml  build.rs  rules.star
src/rust/composition/src/: backend.rs  compose_config.rs  config.rs  discover.rs  error.rs  layout.rs  lib.rs  performance.rs  policy.rs  recovery.rs  selector.rs  serve_config.rs  service.rs  state.rs  status.rs  symlink.rs  synthetic.rs  tracing.rs  vcs_wrappers.rs  watcher.rs
src/rust/composition/src/fuse/: backend.rs  edit_overlay.rs  filesystem.rs  fs_core.rs  mod.rs  patch_generator.rs  platform.rs
src/rust/composition/src/fuse/fuse_t/: backend.rs  bindings.rs  metrics.rs  mod.rs  operations.rs
src/rust/composition/tests/: integration_tests.rs
src/rust/deps-extract/: Cargo.toml  rules.star
src/rust/deps-extract/src/: extraction.rs  main.rs
src/rust/deps-extract/src/languages/: mod.rs  python.rs  rust.rs  solidity.rs  typescript.rs
src/rust/nix-eval/: Cargo.toml  rules.star
src/rust/nix-eval/src/: cli.rs  error.rs  lib.rs
src/testdata/: pnpm-lock.yaml
templates/default/: .envrc  .gitignore  BUCK  flake.nix  toolchain.toml
testdata/: BUCK
(+350 files in other folders)
