# Turnkey Rust workspace
#
# This is a monorepo workspace that declares all Rust dependencies.
# Run `cargo update` to refresh Cargo.lock, then:
#   rustdeps-gen --cargo-lock Cargo.lock > rust-deps.toml

[workspace]
resolver = "2"
members = [
    "src/cmd/check-rust-edition-rs",
    "src/cmd/check-source-coverage-rs",
    "src/cmd/jsdeps-gen",
    "src/cmd/nix-prefetch-cached",
    "src/cmd/pydeps-gen",
    "src/cmd/rustdeps-gen",
    "src/cmd/rustfeatures-gen",
    "src/cmd/soldeps-gen",
    "src/cmd/turnkey-composed",
    "src/examples/rust-hello",
    "src/examples/rust-hello-deps",
    "src/rust/composition",
    "src/rust/deps-extract",
    "src/rust/prefetch-cache",
    "src/rust/starlark-parse",
]

# Shared package metadata for all workspace members
[workspace.package]
edition = "2024"

# Shared dependencies for all workspace members
# ALL dependencies must be declared here and referenced with workspace = true
[workspace.dependencies]
anyhow = "1.0"
base64 = "0.22"
cargo-lock = "10"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"
dirs = "5.0"
env_logger = "0.11"
fuser = { version = "0.17", features = ["libfuse"] }
glob = "0.3"
itoa = "1.0"
libc = "0.2"
log = "0.4"
notify = "8.0"
notify-debouncer-mini = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
serde-saphyr = "0.0.15"
sha2 = "0.10"
tempfile = "3.10"
toml = "0.8"
ureq = { version = "2", features = ["json"] }
walkdir = "2.5"

# Tree-sitter for source code parsing
tree-sitter = "0.25"
tree-sitter-language = "0.1"
tree-sitter-go = "0.25"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-solidity = "1.2.13"
tree-sitter-starlark = "1.3"

# Workspace member references (for path dependencies between crates)
composition = { path = "src/rust/composition", features = ["fuse", "watcher"] }
prefetch-cache = { path = "src/rust/prefetch-cache" }
