[package]
name = "jsdeps-gen"
version = "0.1.0"
edition = "2021"
description = "Generate js-deps.toml from pnpm-lock.yaml for Buck2/Nix integration"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde-saphyr.workspace = true
toml = "0.8"
sha2 = "0.10"
base64 = "0.22"
