[package]
name = "jsdeps-gen"
version = "0.1.0"
edition = "2021"
description = "Generate js-deps.toml from pnpm-lock.yaml for Buck2/Nix integration"

[dependencies]
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
serde.workspace = true
serde-saphyr.workspace = true
sha2.workspace = true
toml.workspace = true
