[package]
name = "nix-prefetch-cached"
version = "0.1.0"
edition.workspace = true
description = "Caching wrapper around nix-prefetch-url for faster dependency resolution"

[[bin]]
name = "nix-prefetch-cached"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
prefetch-cache.workspace = true
