[package]
name = "pydeps-gen"
version = "0.1.0"
edition = "2021"
description = "Generate python-deps.toml from pyproject.toml or requirements.txt for Buck2/Nix integration"

[[bin]]
name = "pydeps-gen"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
ureq = { version = "2", features = ["json"] }
