[package]
name = "pydeps-gen"
version = "0.1.0"
edition.workspace = true
description = "Generate python-deps.toml from pyproject.toml or requirements.txt for Buck2/Nix integration"

[[bin]]
name = "pydeps-gen"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
ureq.workspace = true
