[package]
name = "rustdeps-gen"
version = "0.1.0"
edition = "2021"
description = "Generate rust-deps.toml from Cargo.lock for Buck2/Nix integration"

[[bin]]
name = "rustdeps-gen"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
cargo-lock = "10"
clap = { version = "4", features = ["derive"] }
