[package]
name = "rustdeps-gen"
version = "0.1.0"
edition = "2021"
description = "Generate rust-deps.toml from Cargo.lock for Buck2/Nix integration"

[[bin]]
name = "rustdeps-gen"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
base64.workspace = true
cargo-lock.workspace = true
clap.workspace = true
