[package]
name = "prefetch-cache"
version = "0.1.0"
edition = "2021"
description = "Shared cache for Nix prefetch hashes"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.10"
