[package]
name = "prefetch-cache"
version = "0.1.0"
edition.workspace = true
description = "Shared cache for Nix prefetch hashes"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
