[package]
name = "check-rust-edition-rs"
version = "0.1.0"
edition.workspace = true
description = "Check Rust edition consistency between Cargo.toml and rules.star"

[dependencies]
anyhow.workspace = true
glob.workspace = true
toml.workspace = true
starlark-parse = { path = "../../rust/starlark-parse" }
