[package]
name = "turnkey-composed"
version = "0.1.0"
edition.workspace = true
description = "FUSE composition daemon for Turnkey"

[[bin]]
name = "turnkey-composed"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
composition.workspace = true
ctrlc.workspace = true
env_logger.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
