[package]
name = "composition"
version = "0.1.0"
edition.workspace = true
description = "Composition backend trait for FUSE and symlink-based repository views"

[features]
default = []
fuse = ["dep:fuser", "dep:libc"]
fuse-t = ["dep:libc"]
watcher = ["dep:notify", "dep:notify-debouncer-mini"]

[dependencies]
dirs.workspace = true
log.workspace = true
nix-eval.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true

# Optional FUSE support (Linux: fuser crate, macOS: direct libfuse3 FFI)
fuser = { workspace = true, optional = true }
libc = { workspace = true, optional = true }

# Optional file watcher support
notify = { workspace = true, optional = true }
notify-debouncer-mini = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true
