[package]
name = "deps-extract"
version = "0.1.0"
edition.workspace = true
description = "Extract dependencies from source files using tree-sitter"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tree-sitter.workspace = true
tree-sitter-python.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-solidity.workspace = true
walkdir.workspace = true
