[package]
name = "nix-eval"
version = "0.1.0"
edition.workspace = true
description = "Nix evaluation and build client (currently wraps the nix CLI, replaceable with a direct daemon client)"

[dependencies]
log.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
